model refactoring, extract connection string to appsettings

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "PortalAukcyjnyContext": "Host=localhost:5432;Database=PortalAukcyjny2;Username=postgres;Password=admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+
     }
+
   },
   "AllowedHosts": "*"
 }
