--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -24,4 +24,9 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Uploads\jpg\" />
+    <Folder Include="wwwroot\Uploads\txt\" />
+  </ItemGroup>
+
 </Project>
