--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PortalAukcyjnyContext": "Host=localhost:5432;Database=PortalAukcyjny2;Username=postgres;Password=admin"
+    "PortalAukcyjnyContext": "Host=localhost:5432;Database=PortalAukcyjny2;Username=postgres;Password=admin;IncludeErrorDetail=true"
   },
   "Logging": {
     "LogLevel": {
