--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Restore
+      run: dotnet restore
     - name: Build
       run: dotnet publish -p:PublishProfile=LinuxProfile
     - name: Copy WebApp to server
