external auth template

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "PortalAukcyjnyContext": "Host=localhost:5432;Database=PortalAukcyjny2;Username=postgres;Password=admin;IncludeErrorDetail=true"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "***REMOVED***",
+      "ClientSecret": "***REMOVED***"
+    },
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
