fb, google auth

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -7,6 +7,10 @@
       "ClientId": "***REMOVED***",
       "ClientSecret": "***REMOVED***"
     },
+    "Facebook": {
+      "AppId": "***REMOVED***",
+      "AppSecret": "***REMOVED***"
+    }
   },
   "Logging": {
     "LogLevel": {
