--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -39,15 +39,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Resources\Authentication\Localization.en-US.Designer.cs">
+    <Compile Update="Resources\Authentication\Localization.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Localization.en-US.resx</DependentUpon>
+      <DependentUpon>Localization.resx</DependentUpon>
     </Compile>
-    <Compile Update="Resources\Shared.en-US.Designer.cs">
+    <Compile Update="Resources\Shared.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Shared.en-US.resx</DependentUpon>
+      <DependentUpon>Shared.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -58,9 +58,9 @@
     <EmbeddedResource Update="Resources\Authentication\Localization.pl-PL.resx">
       <Generator></Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Authentication\Localization.en-US.resx">
+    <EmbeddedResource Update="Resources\Authentication\Localization.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Localization.en-US.Designer.cs</LastGenOutput>
+      <LastGenOutput>Localization.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\Shared.fr-FR.resx">
       <Generator></Generator>
@@ -68,9 +68,9 @@
     <EmbeddedResource Update="Resources\Shared.pl-PL.resx">
       <Generator></Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Shared.en-US.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Shared.en-US.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Resources\Shared.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Shared.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
