--- a/WebApp/compilerconfig.json
+++ b/WebApp/compilerconfig.json
@@ -33,8 +33,8 @@
     }
   },
   {
-    "outputFile": "wwwroot/css/gay.css",
-    "inputFile": "wwwroot/Styles/gay.scss",
+    "outputFile": "wwwroot/css/highcontrast.css",
+    "inputFile": "wwwroot/Styles/highcontrast.scss",
     "minify": {
       "enabled": true
     },
