--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         first_ssh: |  
           sudo systemctl stop mvc-backgroundtasks.service
           sudo systemctl stop mvc-webapp.service
-          sudo rm -fr /MVC/repo/PortalAukcyjny/
+          sudo rm -fr /MVC/repo/PortalAukcyjny/*
           sudo -u postgres psql postgres -c 'drop database "PortalAukcyjny2" with (force)'
         scp: |
           /home/runner/work/PortalAukcyjny/* => "/MVC/repo/PortalAukcyjny/"
