recaptcha with working example for seartch

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -20,5 +20,9 @@
     }
 
   },
+  "reCaptcha": {
+    "SiteKey": "***REMOVED***",
+    "SecretKey": "***REMOVED***"
+  },
   "AllowedHosts": "*"
 }
