added currency downloading

--- a/BackgroundTasks/appsettings.json
+++ b/BackgroundTasks/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PortalAukcyjnyContext": "Host=localhost:5432;Database=PortalAukcyjny2;Username=postgres;Password=admin;IncludeErrorDetail=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
