--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -22,5 +22,6 @@
     "SiteKey": "***REMOVED***",
     "SecretKey": "***REMOVED***"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AdminEmail": "***REMOVED***"
 }
